qp-merchant/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qp-merchant-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: merchant.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: qp-merchant
          servicePort: 8094
